Done optimization for jvm params. Made some refactors in scripts